# beacon

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude/: plan.md
.claude/plans/: merged-api-scheduler.md  refactoring-plan.md  template-ext-design.md
beacon/: __init__.py  callback.py  calllback.py  const.py  dryrun.py  errors.py  logging.py  plan.py  renderer.py  runner.py  runtime.py  scheduler.py  utils.py  worker.py
beacon/api/: __init__.py  app.py  server.py
beacon/callbacks/: __init__.py
beacon/cli/: __init__.py  __main__.py  loader.py  main.py  settings.py
beacon/core/: __init__.py  action.py  assets.py  base.py  bundle.py  context.py  executor.py  graph.py  plugin.py  protocols.py  recovery.py  remote_plugin.py  renderer.py  state.py  task_context.py  template.py  templater.py  trigger_rule.py  validation.py  variables.py
beacon/metadata/: __init__.py  json_store.py  local_store.py  memory.py  sqlite.py  sqlite_store.py
beacon/models/: __init__.py  branch.py  dag.py  deployment.py  global_variable.py  group.py  param.py  schedule.py  sensor.py  short_circuit.py  task.py  variable.py
docs/: IMPROVEMENTS.md  design.md  index.md
docs/core/: action.md  architecture-review.md  architecture.md  config.md  deploy.md  design.md  implement_plan.md  production_plan.md  reference.md  roadmap.md  templating.md
docs/examples/: gcs_copy_plugin_family.py  py_api.md  py_with_plugin.md  py_with_standard.md  yaml_with_standard.md
docs/prompt/: review_code.md
tests/: test_add_registry_to_basemodel.py  test_coordination.py  test_demo_merge_model.py  test_multi_scheduler.py  test_phase1_e2e.py  test_py_plugin_e2e.py  test_task_context.py
tests/e2e/: test_all_events.py  test_backfill.py  test_backfill_upstream_outputs.py  test_bundle_e2e.py  test_clear_and_rerun.py  test_clear_with_teardown.py  test_cli_entry_point.py  (+12 more)
(+48 files in other folders)
