[project]
name = "beacon"
version = "0.1.0"
description = "An everyday workflow orchestrator"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.7",
    "croniter>=6.2.2",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
gcs = ["google-cloud-storage>=2.18.0"]
elasticsearch = ["elasticsearch>=8.14.0"]

[project.scripts]
beacon = "beacon.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beacon"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
pythonpath = ["."]
console_output_style = "count"

[tool.ruff]
line-length = 80
exclude = [
    "__pypackages__",
    ".__pycache__",
    ".assets",
    ".idea",
    ".vscode",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "venv",
    "docs",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
